<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DiplomaFinance</string>
    <!-- Activity main menu -->
    <string name="menu_home">Home</string>
    <string name="menu_market">Market</string>
    <!-- Home fragment -->
    <string name="home_fragment">Home</string>
    <!-- Market fragment -->
    <!-- title stocks -->
    <string name="market_fragment">Market</string>
    <string name="title_1">Сбер Банк</string>
    <string name="title_2">Газпром</string>
    <string name="title_3">ЛУКОЙЛ</string>
    <string name="title_4">Роснефть</string>
    <string name="title_5">Яндекс</string>
    <string name="title_6">TCS GROUP</string>
    <string name="title_7">1–800-Flowers.com Inc</string>
    <string name="title_8">10X Genomics Inc</string>
    <string name="title_9">2seventy bio</string>
    <string name="title_10">2U Inc</string>

    <!-- ticker stocks -->
    <string name="ticker_1">SBER</string>
    <string name="ticker_2">GAZP</string>
    <string name="ticker_3">LKOH</string>
    <string name="ticker_4">ROSN</string>
    <string name="ticker_5">YNDX</string>
    <string name="ticker_6">TCSG</string>
    <string name="ticker_7">FLWS</string>
    <string name="ticker_8">TXG</string>
    <string name="ticker_9">TSVT</string>
    <string name="ticker_10">TWOU</string>

    <!-- price stocks -->
    <string name="price_1">267.21 ₽</string>
    <string name="price_2">165.21 ₽</string>
    <string name="price_3">6 706.5 ₽</string>
    <string name="price_4">573.2 ₽</string>
    <string name="price_5">2 262 ₽</string>
    <string name="price_6">3 070 ₽</string>
    <string name="price_7">8.67 $</string>
    <string name="price_8">2.26 $</string>
    <string name="price_9">2.26 $</string>
    <string name="price_10">4.01 $</string>

    <!-- ChartActivivty -->
    <string name="sma">SMA</string>
    <string name="wma">WMA</string>
    <string name="ema">EMA</string>
    <string name="buy">Купить</string>
    <string name="sell">Продать</string>

    <!-- Fragment Home -->
    <string name="hello_home_text">Для продолжения войдите или зарегистрируйтесь</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>

    <!-- LogInFragment -->
    <string name="title_log_in">Вход</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="fields_cannot_be_empty">Поля не могут быть пустыми</string>
    <!-- SignUpFragment -->
    <string name="title_sign_up">Регистрация</string>
    <string name="email">Введите Email</string>
    <string name="password">Введите пароль</string>
    <string name="username">Введите имя</string>
    <!-- FragmentPersonalAccount -->
    <string name="tv_personal_account">Личный кабинет</string>
    <string name="tv_broker_account">Брокерский счёт</string>
    <string name="history_of_operations">Посмотреть историю операций</string>
    <string name="start_simulation">Начать симуляцию</string>

    <string name="count_1">3 шт</string>
    <string name="count_2">4 шт</string>
    <string name="count_3">2 шт</string>
    <string name="count_4">12 шт</string>

    <string name="sum_1">890.7 ₽</string>
    <string name="sum_2">668.3 ₽</string>
    <string name="sum_3">14 410 ₽</string>
    <string name="sum_4">6 800 ₽</string>

    <string name="diff_1">+89.07 ₽</string>
    <string name="diff_2">+7.22 ₽</string>
    <string name="diff_3">+997 ₽</string>
    <string name="diff_4">+21.6 ₽</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>